force-app/main/default/objects/clofor_com_cfs__SOP__c/clofor_com_cfs__SOP__c.object-meta.xml
<CustomObject>
    <label>標準運用プロセス</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>SOP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>