force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__ANOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ANOutput__c</fullName>
    <defaultValue>&quot;Arrival Notice for collecting Freight Forwarding Charge&quot;</defaultValue>
    <label>A/N OUTPUT</label>
    <type>TextArea</type>
</CustomField>