force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__BLOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BLOutput__c</fullName>
    <defaultValue>&quot;final Original or Waybill after draft B/L confirmation by client&quot;</defaultValue>
    <label>B/L OUTPUT</label>
    <type>TextArea</type>
</CustomField>