force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__BNOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BNOutput__c</fullName>
    <defaultValue>&quot;Booking Note for notifying the client&quot;</defaultValue>
    <label>B/N OUTPUT</label>
    <type>TextArea</type>
</CustomField>