force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__CargoDeliveryToExportCSFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoDeliveryToExportCSFCY__c</fullName>
    <defaultValue>&quot;Cargo has to be arrived to CFS or CY to take the scheduled vessel&quot;</defaultValue>
    <label>CARGO DELIVERY TO EXPORT CFS/CY</label>
    <type>TextArea</type>
</CustomField>