force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__CargoPickup__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoPickup__c</fullName>
    <defaultValue>&quot;Arrange a truck and pick up the cargo at pickup location&quot;</defaultValue>
    <label>CARGO PICKUP</label>
    <type>TextArea</type>
</CustomField>