force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__CIOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CIOutput__c</fullName>
    <defaultValue>&quot;Shipping Instruction to arrange a container to shipping line&quot;</defaultValue>
    <label>S/I OUTPUT</label>
    <type>TextArea</type>
</CustomField>