force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__COInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__COInput__c</fullName>
    <defaultValue>&quot;Receive Certificate of Origin for customs clearance in importing country&quot;</defaultValue>
    <label>C/O INPUT</label>
    <type>TextArea</type>
</CustomField>