force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__CustomsClearanceApplicationOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomsClearanceApplicationOutput__c</fullName>
    <defaultValue>&quot;Document Customs Clearance Application Form and submit to Customs Office&quot;</defaultValue>
    <label>CUSTOMS CLEARANCE APPLICATION OUTPUT</label>
    <type>TextArea</type>
</CustomField>