force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__DATE_N__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DATE_N__c</fullName>
    <label>DATE N</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Order Document Received Date from Customer</fullName>
                <default>true</default>
                <label>Shipping Order Document Received Date from Customer</label>
            </value>
            <value>
                <fullName>ETD</fullName>
            </value>
            <value>
                <fullName>ETA</fullName>
            </value>
            <value>
                <fullName>Customs Clearance Application Submit Date</fullName>
            </value>
            <value>
                <fullName>Customs Clearance Permit Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>