force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__DraftBLOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DraftBLOutput__c</fullName>
    <defaultValue>&quot;Draft B/L for client checking&quot;</defaultValue>
    <label>DRAFT B/L OUTPUT</label>
    <type>TextArea</type>
</CustomField>