force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__ManifestOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ManifestOutput__c</fullName>
    <defaultValue>&quot;Manifest to submit to Customs Office&quot;</defaultValue>
    <label>MANIFEST OUTPUT</label>
    <type>TextArea</type>
</CustomField>