force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__ParterDNOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParterDNOutput__c</fullName>
    <defaultValue>&quot;Debit Note toward oversea partner to collect charges&quot;</defaultValue>
    <label>PARTNER D/N OUTPUT</label>
    <type>TextArea</type>
</CustomField>