force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__PhytosanitaryApplicationOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PhytosanitaryApplicationOutput__c</fullName>
    <defaultValue>&quot;Document Phytosanitary Application Form for customs clearance in import country&quot;</defaultValue>
    <label>PHYTOSANITARY APPLICATION OUTPUT</label>
    <type>TextArea</type>
</CustomField>