force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__PhytosanitaryCertificationInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PhytosanitaryCertificationInput__c</fullName>
    <defaultValue>&quot;Receive the Phytosanitary Certification from Government Office.&quot;</defaultValue>
    <label>PHYTOSANITARY CERT INPUT</label>
    <type>TextArea</type>
</CustomField>