force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__PrealertOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PrealertOutput__c</fullName>
    <defaultValue>&quot;Send Pre-Alert to oversea partner to notify cargo and shipping detail&quot;</defaultValue>
    <label>PREALERT OUTPUT</label>
    <type>TextArea</type>
</CustomField>