force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__PromormaInvoiceOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PromormaInvoiceOutput__c</fullName>
    <defaultValue>&quot;Proforma Invoice for Client Checking&quot;</defaultValue>
    <label>PROFORMA(DRAFT) INVOICE OUTPUT</label>
    <type>TextArea</type>
</CustomField>