force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__ShippingOrderFromCustomerInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShippingOrderFromCustomerInput__c</fullName>
    <defaultValue>&quot;Shipping Order Document Receiving from customer&quot;</defaultValue>
    <label>SHIPPING ORDER FROM CUSTOMER-INPUT</label>
    <type>TextArea</type>
</CustomField>