force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__SITimeline__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SITimeline__c</fullName>
    <label>S/I ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SOPTimeline</valueSetName>
    </valueSet>
</CustomField>