force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__SOPCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SOPCategory__c</fullName>
    <label>SOP CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SOPCategory</valueSetName>
    </valueSet>
</CustomField>