force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__SurrenderBLIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SurrenderBLIssueTimeline__c</fullName>
    <label>SURRENDER B/L ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SOPTimeline</valueSetName>
    </valueSet>
</CustomField>