force-app/main/default/objects/clofor_com_cfs__SOP__c/fields/clofor_com_cfs__SurrenderBLOutput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SurrenderBLOutput__c</fullName>
    <defaultValue>&quot;Surrender B/L Issue for Waybill or Surrender B/L&quot;</defaultValue>
    <label>SURRENDER B/L OUTPUT</label>
    <type>TextArea</type>
</CustomField>