force-app/main/default/objects/clofor_com_cfs__SOP__c/recordTypes/clofor_com_cfs__ConsolidationExport.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ConsolidationExport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Consolidation Export.</description>
    <label>Consolidation Export</label>
</RecordType>