force-app/main/default/objects/clofor_com_cfs__SOP__c/recordTypes/clofor_com_cfs__ConsolidationImport.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ConsolidationImport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Consolidation Import.</description>
    <label>Consolidation Import</label>
</RecordType>