force-app/main/default/objects/clofor_com_cfs__SOP__c/recordTypes/clofor_com_cfs__CrossBoarder.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CrossBoarder</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Cross-Boarder business involving more than 3 countries.</description>
    <label>Cross Boarder</label>
</RecordType>