force-app/main/default/objects/clofor_com_cfs__SOP__c/recordTypes/clofor_com_cfs__DomesticTransportation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__DomesticTransportation</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Local Domestic Transportation in domestic.</description>
    <label>Domestic Transportation</label>
</RecordType>