force-app/main/default/objects/clofor_com_cfs__SOP__c/recordTypes/clofor_com_cfs__FreightForwardingExport.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FreightForwardingExport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of freight forwarding export involving 2 countries.</description>
    <label>Freight Forwarding Export</label>
</RecordType>